<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_help"
        android:icon="@drawable/info"
        android:title="@string/help"
        app:showAsAction="ifRoom">
    </item>
    <item
        android:id="@+id/share"
        android:icon="@drawable/share"
        android:title="@string/share"
        app:showAsAction="ifRoom">
    </item>
    <item
        android:id="@+id/fb_action"
        android:icon="@drawable/facebook"
        android:title="@string/facebook"
        app:showAsAction="never">
    </item>
    <item
        android:id="@+id/tw_action"
        android:title="@string/twitter"
        app:showAsAction="never">
    </item>
    <item
        android:id="@+id/in_action"
        android:title="@string/instagram"
        app:showAsAction="never">
    </item>
    <item
        android:id="@+id/exit"
        android:title="Çıkış Yap"
        android:icon="@drawable/logout"
        app:showAsAction="always">
    </item>
</menu>