<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="tr.com.globalmedia.chatterchutter.RegisterActivity">
    <LinearLayout
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/registerUserName"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/userEmail" />

        <EditText
            android:inputType="textPassword"
            android:id="@+id/registerPassword"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginBottom="20dp"
            android:hint="@string/password" />

        <Button
            android:id="@+id/buttonRegister"
            android:background="@color/colorAccent"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_margin="15dp"
            android:layout_marginBottom="20dp"
            android:textColor="#ffffff"
            android:text="@string/register"/>
    </LinearLayout>
</RelativeLayout>
