<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageViewLogo"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="60dp"
                app:srcCompat="@drawable/index" />

            <EditText
                android:id="@+id/editTextUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/userEmail"
                android:inputType="textEmailAddress"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/editTextUserPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <Button
                android:textAllCaps="false"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:id="@+id/buttonLogin"
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:background="@color/colorAccent"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:layout_height="wrap_content"
                android:text="@string/login" />

            <TextView
                android:id="@+id/txtRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="15sp"
                android:text="@string/register" />

            </LinearLayout>
    </ScrollView>
</RelativeLayout>
